# ai-dft

./: .gitignore  README.md  checkpoints-bk  compare.py  data_preprocessing.py  data_view.ipynb  file_to_hdf5.py  functional_dev.ipynb  gen_data.py  gen_data_model.py  gen_data_sort.py  gen_dm_ene.py  gen_pot_ene.py  gen_weight.py  idea.ipynb  model_change.ipynb  model_size.ipynb  new_molecular.ipynb  predict.py  pyproject.toml  requirements.txt  rotate.ipynb  run.py  run_model.ipynb  test.py  test_CH.py  test_data.py  test_dft.py  train.py  utest_data.py  validate.py  veiw_data.ipynb  veiw_training_data.ipynb  viewer.ipynb
aidft/: __init__.py  aux.py  data_loading.py  evaluate.py  get_args.py  select_optimizer_scheduler.py  train_model.py  train_model_single.py
cadft/: __init__.py  cc_dft_data.py  check_dataset.py  data_loading.py  mrksinv.py  test_rks.py  test_rks_pyscf.py  test_uks.py  train_model.py  train_model_dp.py  validate_model.py
cadft.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dft2cc/: dft2cc.py
gen_data/: delete.py  gen_data.py  mkdir.py  rmdir.py  submit.py
gen_data_script/: delete.py  gen_data_template.bash  gen_data_template_direct.bash  mkdir-read-direct.py  mkdir-read-direct1.py  mkdir-read-direct2.py  mkdir-read.py  mrks1.sh  mrks2.sh  out_mkdir
jupyter-notebook/: add_csv.ipynb  check_json.ipynb  dft_grad.ipynb  functional_dev.ipynb  idea.ipynb  model_change.ipynb  model_size.ipynb  new_molecular.ipynb  run_model.ipynb  ucc.ipynb  udft.ipynb  veiw_data.ipynb  veiw_data_surface.ipynb  veiw_training_data.ipynb
manu/: main.aux  main.tex
(+83 files in other folders)
