[project]
name = "cadft"
version = "0.1.0"
description = "AIDFT: AI for density functional theory"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "basis_set_exchange==0.10",
    "numpy==2.0.1",
    "opt_einsum==3.3.0",
    "pandas==2.2.2",
    "pyscf==2.6.2",
    "scipy==1.14.0",
    "segmentation_models_pytorch==0.3.3",
    "torch==2.2.1",
    "tqdm==4.65.0",
    "wandb==0.16.3",
    "setuptools >= 40.6.0",
    "wheel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cadft"]
exclude = []
namespaces = false
